# convertor

./: .daggerignore  .dockerignore  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  Dockerfile.curltest  GitHub Dark (BppleMan).xml  README.md  REFACTOR_SUMMARY.md  base.Dockerfile  config.toml  conv.sh  convertor.service.template  dagger.json  justfile  rustfmt.toml  zig-cc
.convertor.test/: .gitignore  (+1 more)
convertor/: .gitignore  Cargo.toml  Dockerfile  justfile
convertor-cli/: Cargo.toml
convertor-cli/src/: install_service.rs  main.rs  service_provider.rs
convertor-core/: Cargo.toml
convertor-core/examples/: convert_surge_profile.rs  subscription_logs.rs  trace_surge_parse.rs
convertor-core/src/: api.rs  cache.rs  cli.rs  client.rs  config.rs  encrypt.rs  lib.rs  url.rs  url_builder.rs
convertor-core/src/api/: boslife_api.rs  common.rs  subscription_log.rs
convertor-core/src/core/: error.rs  parser.rs  profile.rs  region.rs  renderer.rs
convertor-core/src/core/parser/: clash_parser.rs
convertor-core/src/core/profile/: clash_profile.rs  profile.rs  surge_profile.rs
convertor-core/src/core/renderer/: clash_renderer.rs  surge_renderer.rs
convertor-core/src/router/: query.rs
convertor-server/: Cargo.toml
convertor-server/.convertor/clash/: BosLife_policy.yaml  DIRECT_policy.yaml  profile.yaml
convertor-server/.convertor/surge/: BosLife_policy.conf
convertor-server/src/: lib.rs  main.rs  query.rs  server.rs
convertor-server/src/server/: clash_router.rs  surge_router.rs
convertor-server/tests/: server_mock.rs
convertor-server/tests/server_test/: clash_test.rs  surge_test.rs
convertor/.github/: git-commit-instructions.md
convertor/.run/: Build convertor.run.xml  Run convd.run.xml  Test convd.run.xml
convertor/crates/confly/: Cargo.toml
convertor/crates/confly/src/: cli.rs  main.rs
convertor/crates/confly/src/cli/: config_cli.rs  provider_cli.rs  update.rs
convertor/crates/confly/tests/snapshots/: provider_cli_test__test_subscription_clash_boslife_cmd_0.snap  provider_cli_test__test_subscription_clash_boslife_cmd_3.snap  provider_cli_test__test_subscription_surge_boslife_cmd_0.snap  provider_cli_test__test_subscription_surge_boslife_cmd_1.snap
convertor/crates/convd/: Cargo.toml  build.rs
convertor/crates/convd/assets/: index.md
convertor/crates/convd/assets/static/: index.css
convertor/crates/convd/src/: main.rs  server.rs
convertor/crates/convd/src/ext/: watch_debounce.rs
convertor/crates/convd/src/server/: actuator_response.rs  response.rs  router.rs
convertor/crates/convd/tests/: rule_provider_test.rs  subscription_test.rs
convertor/crates/convd/tests/snapshots/: profile_test__profile_surge_boslife.snap  rule_provider_test__test_rule_provider_clash_boslife_BosLife_force_remote_dns.snap  (+6 more)
convertor/crates/convertor/: Cargo.toml
convertor/crates/convertor/src/: config.rs  core.rs  provider_api.rs  testkit.rs  url.rs
convertor/crates/convertor/tests/: url_builder_test.rs
convertor/crates/example/: Cargo.toml
crates/confly/: Cargo.toml
crates/confly/src/: cli.rs  client_config.rs  command.rs  config.rs  file_provider.rs  lib.rs  main.rs  profile_patcher.rs
crates/confly/src/cli/: config_cli.rs  provider_cli.rs  subscription_cli.rs  update.rs
crates/confly/src/command/: config_cmd.rs  subscription_cmd.rs
crates/confly/src/config/: client_config.rs
crates/confly/test-assets/: convertor.toml
crates/confly/tests/: .provider_cli_test.rs.pending-snap  provider_cli_test.rs  subscription_test.rs
crates/confly/tests/snapshots/: provider_cli_test__test_subscription_clash_boslife_cmd_0.snap  provider_cli_test__test_subscription_clash_boslife_cmd_1.snap  provider_cli_test__test_subscription_clash_boslife_cmd_2.snap  provider_cli_test__test_subscription_clash_boslife_cmd_3.snap  provider_cli_test__test_subscription_surge_boslife_cmd_0.snap  provider_cli_test__test_subscription_surge_boslife_cmd_1.snap  provider_cli_test__test_subscription_surge_boslife_cmd_2.snap  provider_cli_test__test_subscription_surge_boslife_cmd_3.snap  subscription_test__clash__config.yaml.snap  subscription_test__surge__raw.conf.snap  subscription_test__surge__raw_profile.conf.snap  subscription_test__surge__rules.dconf.snap  subscription_test__surge__surge.conf.snap  subscription_test__test_subscription_clash_cmd_1.snap  subscription_test__test_subscription_surge_cmd_0.snap  subscription_test__test_subscription_surge_cmd_1.snap
crates/convd/: Cargo.toml
crates/convd/assets/: .gitignore  index.html
crates/convd/assets/development/: app.css.map  dashboard-error.css.map  dashboard-info.css.map  dashboard-panel.css.map  dashboard-param.css.map  dashboard-sub.css.map  dashboard-subs.css.map  dashboard.css.map  icon-button.css.map  index.html  main.js  no-content.css.map  styles.css  styles.css.map  title.css.map
crates/convd/assets/production/: index.html  main-HWW4CE42.js  main-MG4YFCJT.js  main-O46RYS75.js  styles-BVRYZMLN.css  styles-LOSLJEHX.css
crates/convd/assets/static/: index.css  index.js
crates/convd/examples/: test_loki.rs
crates/convd/src/: ext.rs  lib.rs  main.rs  server.rs
crates/convd/src/ext/: watch_debounce.rs
crates/convd/src/server/: actuator_response.rs  app_state.rs  error.rs  response.rs  router.rs  service.rs
crates/convd/tests/: profile_test.rs  rule_provider_test.rs  server.rs  subscription_test.rs
crates/convd/tests/snapshots/: profile_test__profile_clash_boslife.snap  profile_test__profile_surge_boslife.snap  rule_provider_test__test_rule_provider_clash_boslife_BosLife_policy.snap  rule_provider_test__test_rule_provider_clash_boslife_DIRECT_policy.snap  rule_provider_test__test_rule_provider_clash_boslife_Subscription_policy.snap  rule_provider_test__test_rule_provider_surge_boslife_BosLife_force_remote_dns.snap  rule_provider_test__test_rule_provider_surge_boslife_BosLife_no_resolve.snap  rule_provider_test__test_rule_provider_surge_boslife_DIRECT_force_remote_dns.snap  rule_provider_test__test_rule_provider_surge_boslife_Subscription_policy.snap  subscription_test__subscription_surge_boslife.snap
(+588 files in other folders)
