[workspace.package]
description = "A profile converter for surge/clash."
authors = ["BppleMan"]
version = "2.5.2"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/BppleMan/convertor"

[package]
name = "convertor"
description.workspace = true
authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
default-run = "convertor"

[[example]]
name = "trace_surge_parse"
path = "examples/trace_surge_parse.rs"
required-features = ["bench"]

[dependencies]

[dependencies.dispatch_map]
version = "0.1.3"
features = ["macros"]

# async runtime
[dependencies.tokio]
version = "1.47.1"
default-features = false
features = ["fs", "rt-multi-thread", "signal", "macros"]

[dependencies.tokio-stream]
version = "0.1.17"
default-features = false
features = ["fs"]

[dependencies.tokio-util]
version = "0.7.16"
default-features = false
features = []

# error/result
[dependencies.thiserror]
version = "2.0.12"
default-features = false

[dependencies.color-eyre]
version = "0.6.5"
default-features = false

# tracing
[dependencies.tracing]
version = "0.1.41"
default-features = false
features = ["attributes"]

[dependencies.tracing-subscriber]
version = "0.3.19"
features = ["env-filter", "json", "local-time"]

[dependencies.tracing-appender]
version = "0.2.3"
default-features = false

# serialization
[dependencies.serde]
version = "1.0.219"
default-features = false
features = ["derive"]

[dependencies.serde_json]
version = "1.0.141"
default-features = false

[dependencies.serde_yaml]
version = "0.9.33"
default-features = false

[dependencies.toml]
version = "0.9.2"
default-features = false
features = ["parse", "display", "serde"]

[dependencies.jsonpath_lib]
version = "0.3.0"
default-features = false

# hasher/encoding/decoding
[dependencies.base64]
version = "0.22.1"
default-features = false

[dependencies.percent-encoding]
version = "2.3.1"
default-features = false

[dependencies.chacha20poly1305]
version = "0.10.1"
default-features = false
features = ["getrandom", "alloc"]

[dependencies.rand_core]
version = "0.9.3"
features = ["os_rng"]

[dependencies.rand_chacha]
version = "0.9.0"

# http client
[dependencies.reqwest]
version = "0.12.22"
default-features = false
features = ["json", "stream", "rustls-tls", "cookies"]

[dependencies.url]
version = "2.5.4"
default-features = false
features = ["serde"]

# http server
[dependencies.axum]
version = "0.8.4"
default-features = false
features = ["query", "json", "tokio", "http2"]

[dependencies.axum-extra]
version = "0.10.1"
features = ["typed-header", "scheme", "tracing"]

[dependencies.tower]
version = "0.5.2"
default-features = false
features = []

[dependencies.tower-http]
version = "0.6.6"
default-features = false
features = ["trace"]

# cli
[dependencies.clap]
version = "4.5.45"
default-features = true
features = ["cargo", "derive"]

[dependencies.console]
version = "0.16.0"
default-features = false
features = ["ansi-parsing", "alloc"]

# cache
[dependencies.moka]
version = "0.12.10"
default-features = false
features = ["future"]

[dependencies.redis]
version = "0.32.5"
default-features = true
features = ["tokio-rustls-comp", "streams", "connection-manager"]

# other
[dependencies.regex]
version = "1.11.1"
default-features = false

[dependencies.strum]
version = "0.27.2"
features = ["derive"]

# benchmarking
[dependencies.tracing-span-tree]
version = "0.1.1"
optional = true

[dependencies.tracing-profile]
version = "0.10.9"
optional = true

# metrics
[dependencies.opentelemetry]
version = "0.30.0"
default-features = false
features = ["trace"]
optional = true

[dependencies.opentelemetry_sdk]
version = "0.30.0"
default-features = false
features = ["trace", "rt-tokio"]
optional = true

[dependencies.opentelemetry-otlp]
version = "0.30.0"
default-features = false
features = ["trace", "grpc-tonic"]
optional = true

[dependencies.tracing-opentelemetry]
version = "0.31.0"
default-features = false
optional = true

[dev-dependencies]

[dev-dependencies.serde_json]
version = "1.0.141"
default-features = false

[dev-dependencies.httpmock]
version = "0.7.0"
default-features = false
features = ["colored"]

[dev-dependencies.tower]
version = "0.5.2"
default-features = false

[dev-dependencies.http-body-util]
version = "0.1.3"
default-features = false

[dev-dependencies.pretty_assertions]
version = "1.4.1"
default-features = false
features = ["std"]

[dev-dependencies.insta]
version = "1.43.1"
features = ["filters"]

[features]
default = []
server = []
cli = []
bench = ["tracing-span-tree", "tracing-profile", "tokio/macros"]
otel = [
    "opentelemetry",
    "opentelemetry_sdk",
    "opentelemetry-otlp",
    "tracing-opentelemetry",
]

[profile.alpine]
inherits = "release" # 继承 release 配置
opt-level = 3        # 极限体积优化（如需极致性能可改成3）
lto = "fat"          # 最激进的链接时优化
codegen-units = 1    # 单单元生成，最大化优化效果
#panic = "abort"         # panic 直接 abort，减少依赖和体积
strip = true  # 自动剥离所有符号表
debug = false # 不保留调试符号
#incremental = false     # 关闭增量编译，避免缓存不一致
overflow-checks = false # 禁用溢出检查
