[workspace]
resolver = "3"
members = [
    "crates/convd",
    "crates/confly",
    "crates/convertor",
    "crates/example",
]

[workspace.package]
description = "A profile converter for surge/clash."
authors = ["BppleMan"]
version = "2.5.2"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/BppleMan/convertor"

[workspace.dependencies]
convertor = { path = "crates/convertor", version = "2.5.2" }

[profile.alpine]
inherits = "release" # 继承 release 配置
opt-level = 3        # 极限体积优化（如需极致性能可改成3）
lto = "fat"          # 最激进的链接时优化
codegen-units = 1    # 单单元生成，最大化优化效果
#panic = "abort"         # panic 直接 abort，减少依赖和体积
strip = true  # 自动剥离所有符号表
debug = false # 不保留调试符号
#incremental = false     # 关闭增量编译，避免缓存不一致
overflow-checks = false # 禁用溢出检查
