[workspace]
resolver = "3"
members = [
    "crates/convd",
    "crates/confly",
    "crates/convertor",
    "crates/example",
]

[workspace.package]
description = "A profile converter for surge/clash."
authors = ["BppleMan"]
version = "2.6.12"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/BppleMan/convertor"

[workspace.dependencies]
# 本地/工作区包
convertor = { path = "crates/convertor", version = "2.6.12" }

# 异步运行时 & 并发相关
tokio = { version = "1.47.1", default-features = false }
tokio-stream = { version = "0.1.17", default-features = false }
tokio-util = { version = "0.7.16", default-features = false }
futures-util = { version = "0.3.31", default-features = false }
async-trait = { version = "0.1.89", default-features = false }

# 网络/HTTP 客户端与服务端及中间件
axum = { version = "0.8.4", default-features = false }
axum-extra = { version = "0.10.1", default-features = false }
tower = { version = "0.5.2", default-features = false }
tower-http = { version = "0.6.6", default-features = false }
reqwest = { version = "0.12.23", default-features = false }
http-body-util = { version = "0.1.3", default-features = false }
headers = { version = "0.4.1", default-features = false }

# 序列化/反序列化/配置
serde = { version = "1.0.225", default-features = false }
serde_json = { version = "1.0.145", default-features = false }
serde_yaml = { version = "0.9.33", default-features = false }
toml = { version = "0.9.6", default-features = false }
jsonpath_lib = { version = "0.3.0", default-features = false }

# 日志/追踪/遥测
tracing = { version = "0.1.41", default-features = false }
tracing-subscriber = { version = "0.3.20", default-features = false }
tracing-appender = { version = "0.2.3", default-features = false }
tracing-loki = { version = "0.2.6", default-features = false }
tracing-opentelemetry = { version = "0.31.0", default-features = false }
opentelemetry = { version = "0.30.0", default-features = false }
opentelemetry_sdk = { version = "0.30.0", default-features = false }
opentelemetry-otlp = { version = "0.30.0", default-features = false }

# 加密/哈希/编码
rand_chacha = { version = "0.9.0", default-features = false }
rand_core = { version = "0.9.3", default-features = false }
chacha20poly1305 = { version = "0.10.1", default-features = false }
base64 = { version = "0.22.1", default-features = false }
percent-encoding = { version = "2.3.2", default-features = false }

# 缓存/存储/数据库
redis = { version = "0.32.5", default-features = true }
moka = { version = "0.12.10", default-features = false }

# 工具/解析/匹配/验证
regex = { version = "1.11.2", default-features = false }
console = { version = "0.16.1", default-features = false }
include_dir = { version = "0.7.4", default-features = true }
clap = { version = "4.5.47", default-features = false }
url = { version = "2.5.7", default-features = false }
strum = { version = "0.27.2", default-features = false }

# 测试/调试/开发工具
insta = { version = "1.43.2", default-features = false }
httpmock = { version = "0.7.0", default-features = false }
color-eyre = { version = "0.6.5", default-features = false }
anyhow = { version = "1.0.99", default-features = false }
thiserror = { version = "2.0.16", default-features = false }

# MIME 与类型推断
mime = { version = "0.3.17", default-features = false }
mime_guess = { version = "2.0.5", default-features = true }

[profile.alpine]
inherits = "release" # 继承 release 配置
opt-level = 3        # 极限体积优化（如需极致性能可改成3）
lto = "fat"          # 最激进的链接时优化
codegen-units = 1    # 单单元生成，最大化优化效果
#panic = "abort"         # panic 直接 abort，减少依赖和体积
strip = true  # 自动剥离所有符号表
debug = false # 不保留调试符号
#incremental = false     # 关闭增量编译，避免缓存不一致
overflow-checks = false # 禁用溢出检查
