[package]
name = "convertor-cli"
description.workspace = true
authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
convertor-core = { path = "../convertor-core" }

clap = { workspace = true, features = ["std", "derive"] }
tokio = { workspace = true, features = ["fs", "rt-multi-thread", "macros"] }
tokio-stream.workspace = true
serde.workspace = true
url.workspace = true
color-eyre.workspace = true
reqwest.workspace = true
indicatif.workspace = true
flate2.workspace = true
inquire.workspace = true
