[package]
name = "convertor-cli"
description.workspace = true
authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
convertor-core = { path = "../convertor-core" }

# async runtime
tokio = { workspace = true, default-features = false, features = ["fs", "rt-multi-thread", "signal", "macros"] }
tokio-stream = { workspace = true, default-features = false, features = ["fs"] }


# cli
clap = { workspace = true, default-features = false, features = ["std", "derive", "help"] }
inquire = { workspace = true, default-features = false, features = ["console"] }
indicatif = { workspace = true, default-features = false }

# error/result
color-eyre = { workspace = true, default-features = false, features = ["default"] }

flate2 = { workspace = true, default-features = false, features = ["rust_backend"] }
