[package]
name = "convertor-core"
description.workspace = true
authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# async runtime
tokio = { workspace = true, default-features = false, features = ["fs"] }
tokio-stream = { workspace = true, default-features = false, features = ["fs"] }

# error/result
thiserror = { workspace = true, default-features = false }
color-eyre = { workspace = true, default-features = false }

# tracing
tracing = { workspace = true, default-features = false, features = ["attributes"] }

# serialization
serde = { workspace = true, default-features = false, features = ["derive"] }
serde_json = { workspace = true, default-features = false }
serde_yaml = { workspace = true, default-features = false }
toml = { workspace = true, default-features = false, features = ["parse", "display", "serde"] }
jsonpath_lib = { workspace = true, default-features = false }

# hasher/encoding/decoding
blake3 = { workspace = true, default-features = false }
base64 = { workspace = true, default-features = false }
percent-encoding = { workspace = true, default-features = false }
chacha20poly1305 = { workspace = true, default-features = false, features = ["getrandom", "alloc"] }

# http client
reqwest = { workspace = true, default-features = false, features = ["json", "stream", "rustls-tls", "cookies"] }
url = { workspace = true, default-features = false, features = ["serde"] }

# other
regex = { workspace = true, default-features = false }
moka = { workspace = true, default-features = false, features = ["future"] }
chrono = { workspace = true, default-features = false, features = ["clock"] }

# benchmarking
tracing-span-tree = { workspace = true, optional = true }
tracing-profile = { workspace = true, optional = true }

[dev-dependencies]
tempfile = { workspace = true, default-features = false }
pretty_assertions = { workspace = true, default-features = false, features = ["std"] }


[features]
bench = ["tracing-span-tree", "tracing-profile"]
