[package]
name = "convertor"
description.workspace = true
authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
convertor-core = { path = "../convertor-core" }

clap = { workspace = true, features = ["std", "derive"] }
console = { workspace = true, features = ["ansi-parsing", "alloc"] }
tokio.workspace = true
axum.workspace = true
tower-http.workspace = true
color-eyre.workspace = true
reqwest.workspace = true
tracing.workspace = true
serde.workspace = true
moka.workspace = true
thiserror.workspace = true

[dev-dependencies]
url.workspace = true
serde_json.workspace = true
httpmock = { version = "0.7.0", default-features = false, features = ["colored"] }
tower = { version = "0.5.2", default-features = false }
http-body-util = { version = "0.1.3", default-features = false }
pretty_assertions = { version = "1.4.1", default-features = false, features = ["std"] }
include_dir = { version = "0.7.4", default-features = false }
