[package]
name = "convertor"
description.workspace = true
authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
convertor-core = { path = "../convertor-core" }

# http server
axum = { workspace = true, default-features = false, features = ["query", "json", "tokio", "http2"] }
tower-http = { workspace = true, default-features = false, features = ["trace"] }

# async runtime
tokio = { workspace = true, default-features = false, features = ["rt-multi-thread", "signal"] }

# tracing
tracing = { workspace = true, default-features = false, features = ["attributes"] }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
tracing-appender = { workspace = true, default-features = false }

# cli
clap = { workspace = true, default-features = false, features = ["std", "derive", "help"] }
console = { workspace = true, default-features = false, features = ["ansi-parsing", "alloc"] }

# error/result
thiserror = { workspace = true, default-features = false }
color-eyre = { workspace = true, default-features = false, features = ["default"] }

# cache
moka = { workspace = true, default-features = false, features = ["future"] }

[dev-dependencies]
serde_json = { workspace = true, default-features = false }
httpmock = { workspace = true, default-features = false, features = ["colored"] }
tower = { workspace = true, default-features = false }
http-body-util = { workspace = true, default-features = false }
pretty_assertions = { workspace = true, default-features = false, features = ["std"] }
include_dir = { workspace = true, default-features = false }
