[package]
name = "confly"
description.workspace = true
authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# 错误 / 诊断
color-eyre = { workspace = true }

# 本地 / 工作区 包
convertor = { workspace = true }

# CLI / 工具
clap = { workspace = true, features = ["default", "cargo", "derive"] }

# HTTP / 头部 处理
headers = { workspace = true }

# 日志 / 追踪
tracing = { workspace = true, features = ["attributes"] }

# URL / 编码 / 解析
url = { workspace = true, features = ["serde"] }

# 异步运行时 / Tokio
tokio = { workspace = true, features = ["fs", "rt-multi-thread", "signal", "macros"] }

[dev-dependencies]
# 本地测试工具
convertor = { workspace = true, features = ["testkit"] }

# 断言 / 快照测试
insta = { workspace = true, features = ["yaml"] }

[features]
update = []
