[package]
name = "convd"
description.workspace = true
authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
convertor = { workspace = true }

# async runtime
tokio = { version = "1.47.1", default-features = false, features = ["fs", "rt-multi-thread", "signal", "macros"] }
tokio-stream = { version = "0.1.17", default-features = false, features = ["fs"] }
tokio-util = { version = "0.7.16", default-features = false, features = [] }

# http server
axum = { version = "0.8.4", default-features = false, features = ["query", "json", "tokio", "http2", "macros"] }
axum-extra = { version = "0.10.1", features = ["typed-header", "scheme", "tracing"] }
tower = { version = "0.5.2", default-features = false, features = [] }
tower-http = { version = "0.6.6", default-features = false, features = ["trace"] }

# encoding/decoding
url = { version = "2.5.4", default-features = false, features = ["serde"] }
percent-encoding = { version = "2.3.1", default-features = false }

# error/result
thiserror = { version = "2.0.12", default-features = false }
color-eyre = { version = "0.6.5", default-features = false }

# cli
clap = { version = "4.5.45", default-features = true, features = ["cargo", "derive"] }
console = { version = "0.16.0", default-features = false, features = ["ansi-parsing", "alloc"] }

# tracing
tracing = { version = "0.1.41", default-features = false, features = ["attributes"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "json", "local-time"] }
tracing-appender = { version = "0.2.3", default-features = false }

# cache
moka = { version = "0.12.10", default-features = false, features = ["future"] }
redis = { version = "0.32.5", default-features = true, features = ["tokio-rustls-comp", "streams", "connection-manager"] }

# serialization
serde = { version = "1.0.219", default-features = false, features = ["derive"] }
serde_json = { version = "1.0.143", default-features = false }
serde_yaml = { version = "0.9.33", default-features = false }
toml = { version = "0.9.2", default-features = false, features = ["parse", "display", "serde"] }
jsonpath_lib = { version = "0.3.0", default-features = false }

[dev-dependencies]
convertor = { workspace = true, features = ["testkit"] }

serde_json = { version = "1.0.141", default-features = false }
httpmock = { version = "0.7.0", default-features = false, features = ["colored"] }
tower = { version = "0.5.2", default-features = false }
http-body-util = { version = "0.1.3", default-features = false }
pretty_assertions = { version = "1.4.1", default-features = false, features = ["std"] }
insta = { version = "1.43.1", features = ["filters"] }
