[package]
name = "confly"
description.workspace = true
authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
convertor = { workspace = true }

# async runtime
tokio = { version = "1.46.1", default-features = false, features = ["fs", "rt-multi-thread", "signal", "macros"] }

# cli
clap = { version = "4.5.45", default-features = true, features = ["cargo", "derive"] }

# error/result
color-eyre = { version = "0.6.5", default-features = false }

# tracing
tracing = { version = "0.1.41", default-features = false, features = ["attributes"] }

# cache
redis = { version = "0.32.5", default-features = true, features = ["tokio-rustls-comp", "streams", "connection-manager"] }

# encoding/decoding
url = { version = "2.5.4", default-features = false, features = ["serde"] }

# other
headers = { version = "0.4.1", default-features = false }
serde = { version = "1.0.219", features = ["derive"] }

[dev-dependencies]
convertor = { workspace = true, features = ["testkit"] }

insta = { version = "1.43.1", features = ["yaml"] }

[features]
update = []
