[package]
name = "confly"
description.workspace = true
authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
convertor = { workspace = true }

# async runtime
tokio = { workspace = true, default-features = false, features = ["fs", "rt-multi-thread", "signal", "macros"] }

# cli
clap = { workspace = true, default-features = true, features = ["cargo", "derive"] }

# error/result
color-eyre = { workspace = true, default-features = false }

# tracing
tracing = { workspace = true, default-features = false, features = ["attributes"] }

# cache
redis = { workspace = true, default-features = true, features = ["tokio-rustls-comp", "streams", "connection-manager"] }

# encoding/decoding
url = { workspace = true, default-features = false, features = ["serde"] }

# other
headers = { workspace = true, default-features = false }

[dev-dependencies]
convertor = { workspace = true, features = ["testkit"] }

insta = { workspace = true, features = ["yaml"] }

[features]
update = []
