[package]
name = "convd"
description.workspace = true
authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
convertor = { workspace = true }

# async runtime
tokio = { workspace = true, default-features = false, features = ["fs", "rt-multi-thread", "signal", "macros"] }
tokio-stream = { workspace = true, default-features = false, features = ["fs"] }
tokio-util = { workspace = true, default-features = false, features = [] }

# http server
axum = { workspace = true, default-features = false, features = ["query", "json", "tokio", "http2", "macros"] }
axum-extra = { workspace = true, features = ["typed-header", "scheme", "tracing"] }
tower = { workspace = true, default-features = false, features = [] }
tower-http = { workspace = true, default-features = false, features = ["trace", "fs"] }
mime_guess = { workspace = true, default-features = true }
include_dir = { workspace = true, default-features = true }
url = { workspace = true, default-features = false, features = ["serde"] }

# error/result
thiserror = { workspace = true, default-features = false }
color-eyre = { workspace = true, default-features = false }

# cli
clap = { workspace = true, default-features = true, features = ["cargo", "derive"] }
console = { workspace = true, default-features = false, features = ["ansi-parsing", "alloc"] }

# tracing
tracing = { workspace = true, default-features = false, features = ["attributes"] }

# cache
moka = { workspace = true, default-features = false, features = ["future"] }
redis = { workspace = true, default-features = true, features = ["tokio-rustls-comp", "streams", "connection-manager"] }

# serialization
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true, default-features = false }

# other
strum = { workspace = true }
mime = { workspace = true }

[dev-dependencies]
convertor = { workspace = true, features = ["testkit"] }

serde_json = { workspace = true, default-features = false }
tower = { workspace = true, default-features = false }
http-body-util = { workspace = true, default-features = false }
insta = { workspace = true, features = ["json", "default"] }

[build-dependencies]
anyhow = "1.0.99"
