[package]
name = "convertor"
description.workspace = true
authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# error/result
thiserror = { version = "2.0.12", default-features = false }
color-eyre = { version = "0.6.5", default-features = false }

# tracing
tracing = { version = "0.1.41", default-features = false, features = ["attributes"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "json", "local-time"] }
tracing-appender = { version = "0.2.3", default-features = false }

# serialization
serde = { version = "1.0.219", default-features = false, features = ["derive"] }
serde_json = { version = "1.0.143", default-features = false }
serde_yaml = { version = "0.9.33", default-features = false }
toml = { version = "0.9.2", default-features = false, features = ["parse", "display", "serde"] }
jsonpath_lib = { version = "0.3.0", default-features = false }

# hasher/encoding/decoding
base64 = { version = "0.22.1", default-features = false }
percent-encoding = { version = "2.3.1", default-features = false }
chacha20poly1305 = { version = "0.10.1", default-features = false, features = ["getrandom", "alloc"] }
rand_core = { version = "0.9.3", features = ["os_rng"] }
rand_chacha = { version = "0.9.0" }

# http client
reqwest = { version = "0.12.22", default-features = false, features = ["json", "stream", "rustls-tls", "cookies"] }
url = { version = "2.5.4", default-features = false, features = ["serde"] }

# cli
clap = { version = "4.5.45", default-features = false, features = ["std", "derive"] }

# cache
moka = { version = "0.12.10", default-features = false, features = ["future"] }
redis = { version = "0.32.5", default-features = true, features = ["tokio-rustls-comp", "streams", "connection-manager"] }

# other
regex = { version = "1.11.1", default-features = false }
strum = { version = "0.27.2", features = ["derive"] }
headers = { version = "0.4.1", default-features = false }

# metrics
opentelemetry = { version = "0.30.0", default-features = false, features = ["trace"], optional = true }
opentelemetry_sdk = { version = "0.30.0", default-features = false, features = ["trace", "rt-tokio"], optional = true }
opentelemetry-otlp = { version = "0.30.0", default-features = false, features = ["trace", "grpc-tonic"], optional = true }
tracing-opentelemetry = { version = "0.31.0", default-features = false, optional = true }

# testkit
httpmock = { version = "0.7.0", default-features = false, features = ["colored"], optional = true }

futures-util = "0.3.31"
async-trait = "0.1.89"

[dev-dependencies]
serde_json = { version = "1.0.141", default-features = false }
insta = { version = "1.43.1", features = ["filters"] }

[features]
default = []
testkit = ["httpmock"]
otel = [
    "opentelemetry",
    "opentelemetry_sdk",
    "opentelemetry-otlp",
    "tracing-opentelemetry",
]

[[test]]
name = "encrypt_test"
path = "tests/encrypt_test.rs"
required-features = ["testkit"]

[[test]]
name = "url_builder_test"
path = "tests/url_builder_test.rs"
required-features = ["testkit"]
