[package]
name = "convertor"
description.workspace = true
authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# error/result
thiserror = { workspace = true, default-features = false }
color-eyre = { workspace = true, default-features = false }

# tracing
tracing = { workspace = true, default-features = false, features = ["attributes"] }
tracing-subscriber = { workspace = true, features = ["env-filter", "json", "local-time"] }
tracing-appender = { workspace = true, default-features = false }

# serialization
serde = { workspace = true, default-features = false, features = ["derive"] }
serde_json = { workspace = true, default-features = false }
serde_yaml = { workspace = true, default-features = false }
toml = { workspace = true, default-features = false, features = ["parse", "display", "serde"] }
jsonpath_lib = { workspace = true, default-features = false }

# hasher/encoding/decoding
base64 = { workspace = true, default-features = false }
percent-encoding = { workspace = true, default-features = false }
chacha20poly1305 = { workspace = true, default-features = false, features = ["getrandom", "alloc"] }
rand_core = { workspace = true, features = ["os_rng"] }
rand_chacha = { workspace = true }

# http client
reqwest = { workspace = true, default-features = false, features = ["json", "stream", "rustls-tls", "cookies"] }
url = { workspace = true, default-features = false, features = ["serde"] }

# cli
clap = { workspace = true, default-features = false, features = ["std", "derive"] }

# cache
moka = { workspace = true, default-features = false, features = ["future"] }
redis = { workspace = true, default-features = true, features = ["tokio-rustls-comp", "streams", "connection-manager"] }

# other
regex = { workspace = true, default-features = false }
strum = { workspace = true, features = ["derive"] }
headers = { workspace = true, default-features = false }

# metrics
opentelemetry = { workspace = true, default-features = false, features = ["trace"], optional = true }
opentelemetry_sdk = { workspace = true, default-features = false, features = ["trace", "rt-tokio"], optional = true }
opentelemetry-otlp = { workspace = true, default-features = false, features = ["trace", "grpc-tonic"], optional = true }
tracing-opentelemetry = { workspace = true, default-features = false, optional = true }

# testkit
httpmock = { workspace = true, default-features = false, features = ["colored"], optional = true }

futures-util = { workspace = true }
async-trait = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true, default-features = false }
insta = { workspace = true, features = ["filters"] }

[features]
default = []
testkit = ["httpmock"]
otel = [
    "opentelemetry",
    "opentelemetry_sdk",
    "opentelemetry-otlp",
    "tracing-opentelemetry",
]

[[test]]
name = "encrypt_test"
path = "tests/encrypt_test.rs"
required-features = ["testkit"]

[[test]]
name = "url_builder_test"
path = "tests/url_builder_test.rs"
required-features = ["testkit"]
